[gd_scene load_steps=5 format=3 uid="uid://q5yql3cy7s8q"]

[ext_resource type="PackedScene" uid="uid://dmlpnp15mw2fo" path="res://addons/window_system/windows/base_window.tscn" id="1_05anr"]
[ext_resource type="Theme" uid="uid://03q268pfdt2r" path="res://src/themes/font_theme.tres" id="2_m2b42"]
[ext_resource type="Script" uid="uid://2qw76q2vnud2" path="res://src/windows/command/command_editor_window.gd" id="2_skgt8"]
[ext_resource type="StyleBox" uid="uid://8fmbo06bq5bv" path="res://src/themes/window_panel_theme.tres" id="4_hej61"]

[node name="CommandEditorWindow" instance=ExtResource("1_05anr")]
offset_right = 849.0
offset_bottom = 556.0
theme = ExtResource("2_m2b42")
script = ExtResource("2_skgt8")
minimize_style = "fade_out"
panel_corner_radius = 0
panel_style_override = ExtResource("4_hej61")

[node name="MarginContainer" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer" index="0"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="SearchEdit" type="LineEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Search..."
keep_editing_on_text_submit = true

[node name="SearchOptions" type="OptionButton" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2" index="1"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 14
popup/item_0/text = "Floor Sector ID"
popup/item_0/id = 0
popup/item_1/text = "LeftClick Face ID"
popup/item_1/id = 1
popup/item_2/text = "Object ID"
popup/item_2/id = 12
popup/item_3/text = "Arg01"
popup/item_3/id = 2
popup/item_4/text = "Arg02"
popup/item_4/id = 3
popup/item_5/text = "Arg03"
popup/item_5/id = 4
popup/item_6/text = "Arg04"
popup/item_6/id = 5
popup/item_7/text = "Arg05"
popup/item_7/id = 6
popup/item_8/text = "Arg06"
popup/item_8/id = 7
popup/item_9/text = "Arg07"
popup/item_9/id = 8
popup/item_10/text = "Arg08"
popup/item_10/id = 9
popup/item_11/text = "Command Base"
popup/item_11/id = 10
popup/item_12/text = "Command Modifier"
popup/item_12/id = 11
popup/item_13/text = "Command Index"
popup/item_13/id = 13

[node name="Graph" type="MarginContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GraphEdit" type="GraphEdit" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/Graph" index="0"]
unique_name_in_owner = true
layout_mode = 2
right_disconnects = true
zoom = 0.5
zoom_min = 0.1
show_menu = false

[node name="GraphPopupMenu" type="PopupMenu" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/Graph" index="1"]
unique_name_in_owner = true
item_count = 2
item_0/text = "Add Command"
item_0/id = 0
item_1/text = "Delete Selected"
item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer" index="2"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="0"]
layout_mode = 2
text = "Cancel"

[node name="SaveButton" type="Button" parent="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 10
text = "Save"

[connection signal="text_submitted" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/SearchEdit" to="." method="_on_search_edit_text_submitted"]
[connection signal="item_selected" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer2/SearchOptions" to="." method="_on_search_options_item_selected"]
[connection signal="connection_request" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/Graph/GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="disconnection_request" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/Graph/GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="popup_request" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/Graph/GraphEdit" to="." method="_on_graph_edit_popup_request"]
[connection signal="index_pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/Graph/GraphPopupMenu" to="." method="_on_graph_popup_menu_index_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="Contents/VBoxContainer/MainContainer/MarginContainer/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
